@@ -249,14 +249,14 @@ ret=$?
 case $state in
 (vars)
 	_tags variables
-	_requested variables && {
+	_tags && {
 		_description variables expl 'eix variable name'
 		compadd "$expl[@]" - ${(f)"$(_call_program ${service}-known-vars '$service --known-vars 2>/dev/null')"}
 		ret=$?
 	};;
 (overlay)
 	_tags overlays
-	_requested overlays && {
+	_tags && {
 		local -ua o
 		o=($(PRINT_APPEND= _call_program portdir_overlay 'eix --print PORTDIR_OVERLAY 2>/dev/null'))
 		o+=("$(PRINT_APPEND= _call_program portdir 'eix --print PORTDIR 2>/dev/null')")
@@ -274,25 +274,25 @@ case $state in
 	case $field in
 	(category)
 		_tags categories
-		_requested categories && {
+		_tags && {
 			_description categories expl 'package category'
 			compadd "$expl[@]" - $(FORMAT='<category>\n' _call_program packages${installed:+-installed} 'eix $eixopt 2>/dev/null')
 		};;
 	(name)
 		_tags packages
-		_requested packages && {
+		_tags && {
 			_description packages expl 'package name'
 			compadd "$expl[@]" - $(FORMAT='<name>\n' _call_program packages${installed:+-installed} 'eix $eixopt 2>/dev/null')
 		};;
 	(category/name)
 		_tags packages
-		_requested packages && {
+		_tags && {
 			_description packages expl 'category/name'
 			compadd "$expl[@]" - $(FORMAT='<category>/<name>\n' _call_program packages${installed:+-installed} 'eix $eixopt 2>/dev/null')
 		};;
 	(package)
 		_tags packages
-		_requested packages && case $PREFIX in
+		_tags && case $PREFIX in
 		(*/*)
 			_description packages expl 'category/name'
 			i=${PREFIX%/*}
@@ -305,31 +305,31 @@ case $state in
 		esac;;
 	(useflag)
 		_tags useflags
-		_requested useflags && {
+		_tags && {
 			_description useflags expl 'useflag'
 			compadd "${expl[@]}" - ${$(_call_program useflags 'eix --print-all-useflags 2>/dev/null')##[()+-]#}
 		};;
 	(license)
 		_tags licenses
-		_requested licenses && {
+		_tags && {
 			_description licenses expl 'license'
 			compadd "${expl[@]}" - ${$(_call_program licenses 'eix --print-all-licenses 2>/dev/null')//([\(\)\|]|[![:space:]]#\?)/}
 		};;
 	(slot)
 		_tags slots
-		_requested slots && {
+		_tags && {
 			_description slots expl 'slots'
 			compadd "${expl[@]}" - $(_call_program slots 'eix --print-all-slots 2>/dev/null')
 		};;
 	(homepage)
 		_tags homepages
-		_requested homepages && {
+		_tags && {
 			_description homepages expl 'homepage'
 			compadd "${expl[@]}" - $(FORMAT='<homepage>\n' _call_program homepages 'eix $eixopt 2>/dev/null')
 		};;
 	(set)
 		_tags sets
-		_requested sets && () {
+		_tags && () {
 			local -ua o
 			local portdir j k
 			local -a sets
